log
Thu 20 Mar 2025 10:05:40 PM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
3f6cb15
Thu 20 Mar 2025 10:06:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
2abd85c
Thu 20 Mar 2025 10:11:41 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:83:23: error: comparison between pointer and integer [-Werror]
   83 |          if (first(L) == elem) popCurrent(L);
      |                       ^~
cc1: all warnings being treated as errors
Compilation failed
5b730aa
Thu 20 Mar 2025 10:14:13 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
0b955d8
Thu 20 Mar 2025 10:39:11 PM UTC: 
 exercises.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  3|2
total_score: 40/70
1974fb3
Thu 20 Mar 2025 10:45:19 PM UTC: 
 exercises.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  4|1
total_score: 50/70
3772d55
Thu 20 Mar 2025 11:16:08 PM UTC: 
 exercises.c | 23 +++++++++++++++++++++--
 1 file changed, 21 insertions(+), 2 deletions(-)
 tests:  5|1
total_score: 50/70
adda30f
